same spacing between pc & mobile but scrolling correction for mobile

--- a/home/static/main/styles/main-small.less
+++ b/home/static/main/styles/main-small.less
@@ -242,3 +242,12 @@
         width: 100%;
     }
 }
+
+
+.tyle {
+    margin-bottom: 100px;
+}
+
+.scroll-marker {
+    padding-top: 0;
+}
